--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.github.oboehm</groupId>
     <artifactId>gdv-xport</artifactId>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>3.1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>gdv-xport-lib</artifactId>
@@ -200,10 +200,14 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Object Validation Framework (OVal) -->
+    <!-- Validation -->
     <dependency>
       <groupId>net.sf.oval</groupId>
       <artifactId>oval</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>de.jfachwert</groupId>
+      <artifactId>jfachwert</artifactId>
     </dependency>
 
     <!-- JSON -->
