--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>pom</packaging>
-  <version>3.2.1</version>
+  <version>3.2.2-SNAPSHOT</version>
   <name>GDV.XPort</name>
 
   <modules>
@@ -467,7 +467,7 @@
       <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>jquery</artifactId>
-        <version>3.2.1</version>
+        <version>3.2.2</version>
       </dependency>
 
       <!-- Object Validation Framework (OVal) -->
