--- a/pom.xml
+++ b/pom.xml
@@ -402,6 +402,18 @@
         <version>4.12</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers</artifactId>
+        <version>1.8.3</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>1.8.3</version>
+        <scope>test</scope>
+      </dependency>
 
       <!-- Logging -->
       <dependency>
@@ -678,7 +690,7 @@
 		  <plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-changes-plugin</artifactId>
-            <version>2.5.3</version>
+            <version>2.12.1</version>
 			<executions>
 				<execution>
 					<id>validate-changes</id>
