--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: java
 jdk:
   - oraclejdk8
 
+sudo : required services : - docker
+
 addons:
   sonarcloud:
     organization: "oboehm-github"
