--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,13 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>pom</packaging>
-  <version>3.2.3-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
   <name>GDV.XPort</name>
 
   <modules>
     <module>lib</module>
     <module>service</module>
+    <module>deprecated</module>
   </modules>
 
   <url>http://www.aosd.de/gdv.xport/</url>
