--- a/pom.xml
+++ b/pom.xml
@@ -508,7 +508,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.8.10</version>
+        <version>[2.8.11.1,)</version>
         <optional>true</optional>
       </dependency>
 
