mit develop/4.x verglichen und angepasst

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: java
 jdk:
   - oraclejdk8
 
-sudo : required services : - docker
+sudo: required
+services:
+  - docker
 
 addons:
   sonarcloud:
