--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -236,6 +236,11 @@
       <artifactId>jackson-databind</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <optional>true</optional>
+    </dependency>
 
   </dependencies>
   
