--- a/pom.xml
+++ b/pom.xml
@@ -511,6 +511,12 @@
         <version>[2.8.11.2,2.9)</version>
         <optional>true</optional>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.8.11</version>
+        <optional>true</optional>
+      </dependency>
 
       <!-- JavaBeans Activation Framework (JAF) -->
       <dependency>
