--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,12 @@
             s. https://github.com/spring-projects/spring-boot/issues/6254
           -->
           <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+          <systemProperties>
+            <property>
+              <name>patterntesting.integrationTest</name>
+              <value>true</value>
+            </property>
+          </systemProperties>
         </configuration>
         <executions>
           <execution>
@@ -420,12 +426,12 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
-        <version>2.10.0</version>
+        <version>2.11.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
-        <version>2.10.0</version>
+        <version>2.11.2</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
