--- a/service/pom.xml
+++ b/service/pom.xml
@@ -174,6 +174,25 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <configuration>
+              <target name="copy-dockerfile">
+                <echo message="copy to ${project.build.finalName}.war to ${project.artifactId}.war" level="info"/>
+                <copy file="target/${project.build.finalName}.war" tofile="target/${project.artifactId}.war" />
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
 
   </build>
