--- a/pom.xml
+++ b/pom.xml
@@ -163,12 +163,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M4</version>
+          <version>3.0.0-M5</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.22.0</version>
+          <version>3.0.0-M5</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -245,8 +245,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M4</version>
         <configuration>
+          <parallel>none</parallel>
+          <forkCount>1</forkCount>
+          <perCoreThreadCount>false</perCoreThreadCount>
+          <reuseForks>true</reuseForks>
+          <childDelegation>false</childDelegation>
           <excludes>
             <exclude>**/Abstract*.java</exclude>
           </excludes>
