--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,11 @@
           <artifactId>license-maven-plugin</artifactId>
           <version>1.13</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>clirr-maven-plugin</artifactId>
+          <version>2.8</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -355,6 +360,16 @@
             <link>http://docs.oracle.com/javase/8/docs/api/</link>
             <link>http://www.eclipse.org/aspectj/doc/released/runtime-api</link>
           </links>
+        </configuration>
+      </plugin>
+
+      <!-- Incompatiblity Report -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>clirr-maven-plugin</artifactId>
+        <configuration>
+          <!-- Compare the current code against last release -->
+          <comparisonVersion>4.2.0</comparisonVersion>
         </configuration>
       </plugin>
 
