auf IndentingXMLStreamWriter umgestellt

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -167,6 +167,19 @@
       <artifactId>commons-lang3</artifactId>
     </dependency>
 
+    <!-- XML -->
+    <dependency>
+      <groupId>net.java.dev.stax-utils</groupId>
+      <artifactId>stax-utils</artifactId>
+      <version>20070216</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.bea.xml</groupId>
+          <artifactId>jsr173-ri</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>junit</groupId>
