--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
   <properties>
 
-    <patterntesting.version>1.8.0</patterntesting.version>
+    <patterntesting.version>2.0.2</patterntesting.version>
     <spring-boot.version>2.3.11.RELEASE</spring-boot.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
@@ -455,6 +455,11 @@
       <dependency>
         <groupId>org.patterntesting</groupId>
         <artifactId>patterntesting-concurrent</artifactId>
+        <version>${patterntesting.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.patterntesting</groupId>
+        <artifactId>patterntesting-compat</artifactId>
         <version>${patterntesting.version}</version>
       </dependency>
 
