--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -208,6 +208,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.patterntesting</groupId>
       <artifactId>patterntesting-concurrent</artifactId>
       <scope>test</scope>
