--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>pom</packaging>
-  <version>5.0.1-SNAPSHOT</version>
+  <version>5.1.0</version>
   <name>GDV.XPort</name>
 
   <modules>
