--- a/service/pom.xml
+++ b/service/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.github.oboehm</groupId>
     <artifactId>gdv-xport</artifactId>
-    <version>5.1.1-SNAPSHOT</version>
+    <version>5.2.0</version>
   </parent>
 
   <artifactId>gdv-xport-service</artifactId>
