über -Dgdv.config können jetzt alternative Properties verwendet werden

--- a/lib/src/main/resources/gdv/xport/config/default.properties
+++ b/lib/src/main/resources/gdv/xport/config/default.properties
@@ -1,7 +1,7 @@
 #
 # Hier sind die Default-Properties hinterlegt.
 # Beim Start koennen ueber "-Dgdv.config=andere.properties" andere
-# Defaults uebergeben werden (noch nicht realisiert)
+# Defaults uebergeben werden.
 #
 # Wurde mit 5.3 eingefuehrt.
 #
