--- a/lib/src/main/resources/gdv/xport/config/default.properties
+++ b/lib/src/main/resources/gdv/xport/config/default.properties
@@ -12,6 +12,9 @@ gdv.VU-Nummer=DUMMY
 # XML von GDV-Online, das vom XmlService verwendet wird
 gdv.XML-Resource=VUVM2018.xml
 
+# End of Datensatz - ueblicherweise Zeilenvorschub, kann auch leer sein
+gdv.eod=\n
+
 # gibt an, ob beim Setzen eines Feldes zu grosse Werte abgeschnitten
 # werden sollen
 gdv.feld.truncate=false
