--- a/lib/src/main/resources/gdv/xport/config/default6.properties
+++ b/lib/src/main/resources/gdv/xport/config/default6.properties
@@ -9,6 +9,9 @@ gdv.VU-Nummer=DUMMY
 # XML von GDV-Online, das vom XmlService verwendet wird
 gdv.XML-Resource=VUVM2018.xml
 
+# End of Datensatz - ueblicherweise Zeilenvorschub, kann auch leer sein
+gdv.eod=\n
+
 # Verhalten bei zu grossen Werten (*)
 gdv.feld.truncate=true
 
