Properties fuer verschiedene VUVM20xx-Versionen hinzugefügt

--- a/lib/src/main/resources/gdv/xport/config/2009.properties
+++ b/lib/src/main/resources/gdv/xport/config/2009.properties
@@ -1,5 +1,5 @@
 #
-# Hier sind die Default-Properties hinterlegt.
+# Hier sind die Default-Properties fuer VUVM2009 hinterlegt.
 # Beim Start koennen ueber "-Dgdv.config=andere.properties" andere
 # Defaults uebergeben werden.
 #
@@ -10,7 +10,7 @@
 gdv.VU-Nummer=DUMMY
 
 # XML von GDV-Online, das vom XmlService verwendet wird
-gdv.XML-Resource=VUVM2018.xml
+gdv.XML-Resource=VUVM2009.xml
 
 # End of Datensatz - ueblicherweise Zeilenvorschub, kann auch leer sein
 gdv.eod=\n
