Config kann jetzt in GdvXmlFormatter reingereicht werden

--- a/lib/src/main/resources/gdv/xport/config/default.properties
+++ b/lib/src/main/resources/gdv/xport/config/default.properties
@@ -21,3 +21,6 @@ gdv.feld.truncate=false
 
 # gibt an, ob in numerischen Feldern Blanks mit Nullen aufgefuellt werden sollen
 gdv.numfeld.fill-blanks=false
+
+# beim Export als XML-Datei werden Default-Werte nicht mit exportiert
+gdv.export.xml.compact=false
