eigenen Validator in Feld für Validierungen hinzugefügt

--- a/lib/src/main/resources/gdv/xport/config/default.properties
+++ b/lib/src/main/resources/gdv/xport/config/default.properties
@@ -19,6 +19,9 @@ gdv.eod=\n
 # werden sollen
 gdv.feld.truncate=false
 
+# automatische Validierung von Feldern findet nicht statt
+gdv.feld.validate=false
+
 # gibt an, ob in numerischen Feldern Blanks mit Nullen aufgefuellt werden sollen
 gdv.numfeld.fill-blanks=false
 
