gdv.feld.validate kann off/false, lax/true, strict annehmen

--- a/lib/src/main/resources/gdv/xport/config/default.properties
+++ b/lib/src/main/resources/gdv/xport/config/default.properties
@@ -19,7 +19,7 @@ gdv.eod=\n
 # werden sollen
 gdv.feld.truncate=false
 
-# automatische Validierung von Feldern findet nicht statt
+# automatische Validierung von Feldern (off/false, lax/true, strict)
 gdv.feld.validate=false
 
 # gibt an, ob in numerischen Feldern Blanks mit Nullen aufgefuellt werden sollen
