Datenpaket kann jetzt als Listener beim DatenpaketStreamer registriert werden

--- a/lib/src/main/resources/gdv/xport/config/experimental.properties
+++ b/lib/src/main/resources/gdv/xport/config/experimental.properties
@@ -15,5 +15,8 @@ gdv.eod=\n
 # Verhalten bei zu grossen Werten (*)
 gdv.feld.truncate=true
 
+# automatische Validierung von Feldern (off/false, lax/true, strict)
+gdv.feld.validate=strict
+
 # gibt an, ob in numerischen Feldern Blanks mit Nullen aufgefuellt werden sollen (*)
 gdv.numfeld.fill-blanks=true
