--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
   <properties>
 
     <patterntesting.version>2.0.2</patterntesting.version>
-    <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
+    <spring-boot.version>2.4.12</spring-boot.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
