--- a/pom.xml
+++ b/pom.xml
@@ -151,9 +151,9 @@
           <version>1.9</version>
         </plugin>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
+          <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
-          <version>3.9.0.2155</version>
+          <version>3.9.1.2184</version>
         </plugin>
         <plugin>
           <groupId>org.jacoco</groupId>
@@ -279,7 +279,7 @@
       </plugin>
       <!-- Sonar -->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
       </plugin>
 
