Property "gdv.numfeld.fill-blanks" wurde wieder entfernt

--- a/lib/src/main/resources/gdv/xport/config/default.properties
+++ b/lib/src/main/resources/gdv/xport/config/default.properties
@@ -23,4 +23,4 @@ gdv.feld.truncate=false
 gdv.feld.validate=false
 
 # gibt an, ob in numerischen Feldern Blanks mit Nullen aufgefuellt werden sollen
-gdv.numfeld.fill-blanks=false
+#gdv.numfeld.fill-blanks=false
