--- a/deprecated/pom.xml
+++ b/deprecated/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.github.oboehm</groupId>
     <artifactId>gdv-xport</artifactId>
-    <version>6.0.1-SNAPSHOT</version>
+    <version>6.0.1</version>
   </parent>
 
   <artifactId>gdv-xport-deprecated</artifactId>
