Implementierung von datenfelder-Collection austauschbar (über -Dgdv.debug=true)

--- a/lib/src/main/resources/gdv/xport/config/default.properties
+++ b/lib/src/main/resources/gdv/xport/config/default.properties
@@ -6,8 +6,9 @@
 # Wurde mit 5.3 eingefuehrt.
 #
 
-# VU-Nummer, die als default gesetzt wird
-gdv.VU-Nummer=DUMMY
+# bei 'true' wird beim Teildatensatz eine SortedSet fuer die datenfelder verwendet,
+# um das debuggen zu erleichtern (Achtung: ca. 45% mehr Speicherverbrauch)
+gdv.debug=false
 
 # XML von GDV-Online, das vom XmlService verwendet wird
 gdv.XML-Resource=VUVM2018.xml
