--- a/lib/src/main/resources/gdv/xport/config/experimental.properties
+++ b/lib/src/main/resources/gdv/xport/config/experimental.properties
@@ -3,8 +3,9 @@
 # Geaenderte Werte gegenueber v5 sind am (*) am Kommentar-Ende erkennbar.
 #
 
-# VU-Nummer, die als default gesetzt wird
-gdv.VU-Nummer=DUMMY
+# beim Teildatensatz wird eine SortedSet fuer die datenfelder verwendet,
+# um das debuggen zu erleichtern
+gdv.debug=true
 
 # XML von GDV-Online, das vom XmlService verwendet wird
 gdv.XML-Resource=VUVM2018.xml
