--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -121,8 +121,12 @@
       <artifactId>commons-cli</artifactId>
     </dependency>
     <dependency>
-    <groupId>commons-httpclient</groupId>
-    <artifactId>commons-httpclient</artifactId>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5-fluent</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
