Config-Ctor wird bei Instanziierung berücksichtigt

--- a/lib/src/main/resources/gdv/xport/config/experimental.properties
+++ b/lib/src/main/resources/gdv/xport/config/experimental.properties
@@ -18,3 +18,16 @@ gdv.feld.truncate=true
 
 # automatische Validierung von Feldern (off/false, lax/true, strict)
 gdv.feld.validate=strict
+
+# eigene Validatoren definieren:
+# gdv.validator.<Feld-Klasse>=<Validator-Klasse>
+gdv.validator.gdv.xport.feld.Feld=gdv.xport.feld.Feld$Validator
+gdv.validator.gdv.xport.satz.xml.FeldXml=gdv.xport.feld.Feld$Validator
+gdv.validator.gdv.xport.feld.NumFeld=gdv.xport.feld.NumFeld$Validator
+gdv.validator.gdv.xport.feld.AlphaNumFeld=gdv.xport.feld.AlphaNumFeld$Validator
+gdv.validator.gdv.xport.feld.Zeichen=gdv.xport.feld.AlphaNumFeld$Validator
+gdv.validator.gdv.xport.feld.Betrag=gdv.xport.feld.NumFeld$Validator
+gdv.validator.gdv.xport.feld.BetragMitVorzeichen=gdv.xport.feld.BetragMitVorzeichen$Validator
+gdv.validator.gdv.xport.feld.Datum=gdv.xport.feld.Datum$Validator
+gdv.validator.gdv.xport.feld.VUNummer=gdv.xport.feld.AlphaNumFeld$Validator
+gdv.validator.gdv.xport.feld.Version=gdv.xport.feld.Feld$Validator
