Konfig-Anpassungen für SpringDoc

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.profiles.active=default
 
 # Port 2517 ist 0x9D5 =~ gDV
 server.port=2517
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.writer-with-default-pretty-printer=true
