--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
   <properties>
 
     <patterntesting.version>2.1.2</patterntesting.version>
-    <spring-boot.version>2.5.14</spring-boot.version>
+    <spring-boot.version>2.6.14</spring-boot.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <java.version>8</java.version>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
 
     <main.class>gdv.xport.Main</main.class>
 
@@ -553,20 +553,27 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>2.14.1</version>
-        <optional>true</optional>
+        <version>2.14.2</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>2.14.1</version>
-        <optional>true</optional>
+        <version>2.14.2</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.14.1</version>
-        <optional>true</optional>
+        <version>2.14.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-dataformat-xml</artifactId>
+        <version>2.14.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.jaxrs</groupId>
+        <artifactId>jackson-jaxrs-base</artifactId>
+        <version>2.13.4</version>
       </dependency>
 
       <!-- JavaBeans Activation Framework (JAF) -->
