Reihenfolge Registrierung HttpMessageConverter korritiert

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -11,5 +11,8 @@ spring.profiles.active=default
 server.port=2517
 
 springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 springdoc.writer-with-default-pretty-printer=true
+
+server.forward-headers-strategy=framework
