--- a/lib/src/main/resources/gdv/xport/util/satzarten.properties
+++ b/lib/src/main/resources/gdv/xport/util/satzarten.properties
@@ -6,7 +6,7 @@
 0102=Adressteil / Antragspartnerdaten
 0200=Allgemeiner Vertragsteil
 0202=Allgemeine Antragsdaten
-0210=Allgemeiner Satz
+#0210=Allgemeiner Satz
 0210.000=Allgemeiner Satz
 0210.560=Kapitalanlage - Vertragsspezifisch
 0210.570=Baufinanzierung - Vertragsspezifisch
