doppelte Einträge auskommentiert

--- a/lib/src/main/resources/gdv/xport/util/satzarten.properties
+++ b/lib/src/main/resources/gdv/xport/util/satzarten.properties
@@ -32,7 +32,7 @@
 0210.140=Verbundene Geb\u00e4ude
 0210.130=Verbundene Hausrat
 0210.510=Verkehrsservice
-0211=Allgemeiner Satz - Vertragsspezifischer Teil
+#0211=Allgemeiner Satz - Vertragsspezifischer Teil
 0211.000=Allgemeiner Satz - Vertragsspezifischer Teil
 0211.080=Feuer - Industrie, Gewerbl. Sach - Vertragspezifischer Teil
 0211.110=Glas - Vertragsspezifischer Teil
@@ -56,7 +56,7 @@
 0212.054=KFZ - Fahrzeugdaten "Antrag"
 0212.055=KFZ - Fahrzeugdaten "Antrag"
 0212.059=KFZ - Fahrzeugdaten "Antrag"
-0220=Allgemeiner Satz
+#0220=Allgemeiner Satz
 0220.000=Allgemeiner Satz
 0220.560=Kapitalanlage - Spartenspezifisch
 0220.570=Baufinanzierung - Spartenspezifisch
@@ -81,20 +81,8 @@
 0220.020.2=Kranken - Allgemeine Tarifdaten
 0220.020.3=Kranken - Spezielle Tarifdaten
 0220.684=Tierkranken - Spartenspezifischer Teil
-0220.010=Leben - Angaben zur versicherten Person = Wagnisart 0
+#0220.010=Leben - Angaben zur versicherten Person = Wagnisart 0
 0220.010.0=Leben - Angaben zur versicherten Person = Wagnisart 0
-0220.010.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 1
-0220.010.1.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 u. 3
-0220.010.1.6=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 - Bezugsrechte
-0220.010.1.7=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 - Auszahlungen
-0220.010.1.8=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 - Zuk\u00fcnftige Summen\u00e4nderung
-0220.010.1.9=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 - Wertungssummen
-0220.010.3=Leben - Kapitallebens-/Risikovers. = Wagnisart 3
-0220.010.3.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 3
-0220.010.3.6=Leben - Kapitallebens-/Risikovers. = Wagnisart 3 - Bezugsrechte
-0220.010.3.7=Leben - Kapitallebens-/Risikovers. = Wagnisart 3 - Auszahlungen
-0220.010.3.8=Leben - Kapitallebens-/Risikovers. = Wagnisart 3 - Zuk\u00fcnftige Summen\u00e4nderung
-0220.010.3.9=Leben - Kapitallebens-/Risikovers. = Wagnisart 3 - Wertungssummen
 0220.010.13=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 u. 3
 0220.010.13.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 u. 3
 0220.010.13.6=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 u. 3 - Bezugsrechte
@@ -107,16 +95,6 @@
 0220.010.2.7=Leben - Rentenversicherung = Wagnisart 2 - Auszahlung
 0220.010.2.8=Leben - Rentenversicherung = Wagnisart 2 - Zuk\u00fcnftige Summen\u00e4nderungen
 0220.010.2.9=Leben - Rentenversicherung = Wagnisart 2 - Wertungssummen
-0220.010.4=Leben - Berufsunf\u00e4higkeit = Wagnisart 4
-0220.010.4.1=Leben - Berufsunf\u00e4higkeit = Wagnisart 4
-0220.010.4.6=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 - Bezugsrechte
-0220.010.4.8=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 - Zuk\u00fcnftige Summen\u00e4nderung
-0220.010.4.9=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 - Wertungssummen
-0220.010.8=Leben - Berufsunf\u00e4higkeit = Wagnisart 8
-0220.010.8.1=Leben - Berufsunf\u00e4higkeit = Wagnisart 8
-0220.010.8.6=Leben - Berufsunf\u00e4higkeit = Wagnisart 8 - Bezugsrechte
-0220.010.8.8=Leben - Berufsunf\u00e4higkeit = Wagnisart 8 - Zuk\u00fcnftige Summen\u00e4nderung
-0220.010.8.9=Leben - Berufsunf\u00e4higkeit = Wagnisart 8 - Wertungssummen
 0220.010.48=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 u. 8
 0220.010.48.1=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 u. 8
 0220.010.48.6=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 u. 8 - Bezugsrechte
@@ -150,7 +128,7 @@
 0220.140=Verbundene Geb\u00e4ude
 0220.130=Verbundene Hausrat
 0220.510=Verkehrsservice
-0221=Allgemeiner Satz - Spartenspezifischer Teil
+#0221=Allgemeiner Satz - Spartenspezifischer Teil
 0221.000=Allgemeiner Satz - Spartenspezifischer Teil
 0221.080=Feuer - Industrie, Gewerbl. Sach - Spartenspezifischer Teil
 0221.110=Glas - Spartenspezifischer Teil
@@ -165,24 +143,12 @@
 0221.010.13.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 u. 3
 0221.010.13.7=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 u. 3 - Auszahlungen
 0221.010.13.8=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 u. 3 - Zuk\u00fcnftige Summen\u00e4nderungen
-0221.010.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 1
-0221.010.1.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 1
-0221.010.1.7=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 - Auszahlungen
-0221.010.1.8=Leben - Kapitallebens-/Risikovers. = Wagnisart 1 - Zuk\u00fcnftige Summen\u00e4nderungen
-0221.010.3=Leben - Kapitallebens-/Risikovers. = Wagnisart 3
-0221.010.3.1=Leben - Kapitallebens-/Risikovers. = Wagnisart 3
-0221.010.3.7=Leben - Kapitallebens-/Risikovers. = Wagnisart 3 - Auszahlungen
-0221.010.3.8=Leben - Kapitallebens-/Risikovers. = Wagnisart 3 - Zuk\u00fcnftige Summen\u00e4nderungen
 0221.010.2=Leben - Rentenversicherung = Wagnisart 2
 0221.010.2.1=Leben - Rentenversicherung = Wagnisart 2
 0221.010.2.7=Leben - Rentenversicherung = Wagnisart 2 - Auszahlung
 0221.010.2.8=Leben - Rentenversicherung = Wagnisart 2 - Zuk\u00fcnftige Summen\u00e4nderungen
 0221.010.48=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 u. 8
 0221.010.48.1=Leben - Berufsunf\u00e4higkeit = Wagnisart 4 u. 8
-0221.010.4=Leben - Berufsunf\u00e4higkeit = Wagnisart 4
-0221.010.4.1=Leben - Berufsunf\u00e4higkeit = Wagnisart 4
-0221.010.8=Leben - Berufsunf\u00e4higkeit = Wagnisart 8
-0221.010.8.1=Leben - Berufsunf\u00e4higkeit = Wagnisart 8
 0221.010.5=Leben - Risikozusatz = Wagnisart 5
 0221.010.5.1=Leben - Risikozusatz = Wagnisart 5
 0221.010.5.8=Leben - Risikozusatz = Wagnisart 5 - Zuk\u00fcnftige Summen\u00e4nderung
