Satzart 0 wird als valide akzeptiert

--- a/lib/src/main/resources/gdv/xport/util/satzarten.properties
+++ b/lib/src/main/resources/gdv/xport/util/satzarten.properties
@@ -1,5 +1,5 @@
 # Enthaelt eine Liste aller zugelassenen Satzarten inkl. Satzbezeichnung
-0000=unbekannte Satzart
+#0000=unbekannte Satzart
 0001=Vorsatz
 0052=Gesch\u00e4ftsvorfall - Vorsatz
 0100=Adressteil
